<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/wallet_holo_blue_light">

    <ImageView
        android:id="@+id/infowindow_imageview_imagem"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/home_icon_custom"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/infowindow_imageview_imagem"
        android:layout_alignTop="@+id/infowindow_imageview_imagem"
        android:layout_toEndOf="@+id/infowindow_imageview_imagem"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infowindow_textview_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descri_o_aqui"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/infowindow_textview_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="119dp"
        android:layout_toEndOf="@+id/infowindow_imageview_imagem"
        android:gravity="center"
        android:text="@string/t_tulo"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>
